# Web-Server

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  Doxyfile  LICENSE  README.md  WebServer.cbp
doc/html/: dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html  md__home_mat_Desktop_C_09_09_Web-Server_README.html  pages.html
doc/html/search/: all_0.js
src/: CMakeLists.txt  async_client.hpp  connection.hpp  exceptions.hpp  main.cpp  request.hpp  request_handler.hpp  request_parser.hpp  response.hpp  server.hpp  status_code.hpp  web_server  web_server.cbp
src/client/: CMakeLists.txt  async_client.hpp  client_runner.hpp
tests/: CMakeLists.txt  test_example.cpp  web_server_tests.cbp
web/: index.html
